--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "antd": "^3.26.3",
     "next": "9.1.5",
     "node-sass": "^4.13.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6"
   }
 }
