--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "validator": "^12.1.0"
   }
 }
