--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^3.26.3",
+    "axios": "^0.19.0",
+    "js-cookie": "^2.2.1",
     "next": "9.1.5",
+    "next-cookies": "^2.0.3",
+    "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
