--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
+    "nprogress": "^0.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "^7.1.3",
