--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nprogress": "^0.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-quill": "^1.3.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
